# cinc

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  test_cfg.toml
src/: args.rs  config.rs  lib.rs  main.rs  manifest.rs  paths.rs  platform.rs  secrets.rs  sync.rs  ui.rs
src/backends/: filesystem.rs  mod.rs  webdav.rs
