[package]
name = "cinc"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
fs-err = "3.1.0"
gethostname = "1.0.2"
itertools = "0.14.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
steamlocate = "2.0.1"
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
xz2 = "0.1.7"
