[package]
name = "cinc"
version = "0.2.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x00002a/cinc"
homepage = "https://github.com/0x00002a/cinc"
description = "Cloud sync replacement for games it"


[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["color", "derive"] }
colored = "3.0.0"
dirs = "6.0.0"
eframe = { version = "0.31.1", default-features = false, features = [
    "wayland",
    "wgpu",
    "x11",
] }
egui = "0.31.1"
fs-err = "3.1.0"
gethostname = "1.0.2"
itertools = "0.14.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
rpassword = "7.4.0"
secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
steamlocate = "2.0.1"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "tracing",
    "macros",
] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typesum = "0.2.0"
walkdir = "2.5.0"
xz2 = "0.1.7"
