[package]
name = "cinc"
version = "0.2.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x00002a/cinc"
homepage = "https://github.com/0x00002a/cinc"
description = "Cloud sync replacement for games that don't have it"


[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["color", "derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0.0"
fs-err = "3.1.0"
gethostname = "1.0.2"
itertools = "0.14.0"
popout = "0.1.0"
reqwest = { version = "0.12.15" }
ron = "0.10.1"
secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
steamlocate = "2.0.1"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "tracing",
    "macros",
] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typesum = "0.2.0"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
xz2 = "0.1.7"

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
testdir = "0.9.3"
